<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="action_settings">Settings</string>
    <string name="txt_x">X</string>
    <string name="title_activity_add_inventory">Add Inventory</string>
    <string name="txt_new_inv_name_label">Name:</string>
    <string name="txt_new_inv_info_label">Other Info:</string>
    <string name="txt_new_inv_name_hint">Enter the inventory\'s name</string>
    <string name="txt_new_inv_info_hint">Add any other information about the inventory</string>
    <string name="action_save">Save</string>
    <string name="duplicate_inventory_warning">An Inventory with that name already exists</string>
    <string name="title_activity_inventory_home">InventoryHomeActivity</string>
    <string name="btn_view_items">View Items</string>
    <string name="btn_shopping_list">Shopping List</string>
    <string name="btn_reports">Reports</string>
</resources>
