<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InventoryHomeActivity"
    tools:showIn="@layout/activity_inventory_home">

    <TextView
        android:id="@+id/txt_inv_home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/color_grey_mid"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_view_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colour_purple_mid"
        android:lineSpacingExtra="8sp"
        android:padding="12dp"
        android:text="@string/btn_view_items"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colour_white"
        android:textSize="30sp"
        android:onClick="launchItemView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inv_home_name" />

    <Button
        android:id="@+id/btn_shopping_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colour_purple_mid"
        android:lineSpacingExtra="8sp"
        android:padding="12dp"
        android:text="@string/btn_shopping_list"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colour_white"
        android:textSize="30sp"
        android:onClick="launchShoppingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_items" />

    <Button
        android:id="@+id/btn_reports"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/color_grey_light"
        android:lineSpacingExtra="8sp"
        android:padding="12dp"
        android:text="@string/btn_reports"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_grey_dark"
        android:textSize="30sp"
        android:onClick="launchReports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shopping_list" />
</android.support.constraint.ConstraintLayout>